Remove prefix for generated library

--- a/lib_email/CMakeLists.txt
+++ b/lib_email/CMakeLists.txt
@@ -3,6 +3,7 @@ include_directories("../")
 
 file(GLOB LIB_EMAIL_SOURCES "./src/*.c")
 add_library(lib_email SHARED ${LIB_EMAIL_SOURCES})
+set_target_properties(lib_email PROPERTIES PREFIX "")
 find_package(CURL)
 if(CURL_FOUND)
     include_directories(${CURL_INCLUDE_DIR})
