--- a/lib_email/CMakeLists.txt
+++ b/lib_email/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(CURL)
 if(CURL_FOUND)
     include_directories(${CURL_INCLUDE_DIR})
     target_link_libraries(lib_email ${CURL_LIBRARIES})
+    target_link_libraries(lib_email lib_util)
 ELSE(CURL_FOUND)
     MESSAGE(FATAL_ERROR "Could not find CURL library")
 ENDIF(CURL_FOUND)
