Link with lib_email.

--- a/lib_lua_email/CMakeLists.txt
+++ b/lib_lua_email/CMakeLists.txt
@@ -10,3 +10,4 @@ find_package(Lua REQUIRED)
 include_directories(${LUA_INCLUDE_DIR})
 target_link_libraries(lib_lua_email ${LUA_LIBRARIES})
 link_directories(${LUA_LIBRARIES})
+target_link_libraries(lib_lua_email lib_email)
