Copy shared object to the location where the test script is. Run the script after the build.

--- a/lib_lua_email/CMakeLists.txt
+++ b/lib_lua_email/CMakeLists.txt
@@ -11,3 +11,17 @@ include_directories(${LUA_INCLUDE_DIR})
 target_link_libraries(lib_lua_email ${LUA_LIBRARIES})
 link_directories(${LUA_LIBRARIES})
 target_link_libraries(lib_lua_email lib_email)
+
+add_custom_command(TARGET lib_lua_email
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy 
+        $<TARGET_FILE:lib_lua_email> 
+        "${CMAKE_CURRENT_SOURCE_DIR}/test/"
+)
+if(DEFINED RUN_LUA_UNIT_TEST AND NOT DEFINED RUN_UNIT_TEST)
+    add_custom_command(TARGET lib_lua_email
+        POST_BUILD
+        COMMAND "lua5.3"
+        ARGS "${CMAKE_CURRENT_SOURCE_DIR}/test/test.lua"
+    )
+endif(DEFINED RUN_LUA_UNIT_TEST AND NOT DEFINED RUN_UNIT_TEST)
